--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-# docker compose up -d --build --force-recreate
 version: '3.8'
 name: store
 
@@ -18,6 +17,25 @@ services:
     restart: always
     networks:
       - private-network
+
+  account:
+    build:
+      context: ../platforms-microservices-store-account-resource/
+      dockerfile: Dockerfile
+    container_name: store-account
+    image: store-account:latest
+    environment:
+      - spring.datasource.url=jdbc:postgresql://store-db-store:5432/store
+      - spring.datasource.username=store
+      - spring.datasource.password=store
+    deploy:
+      mode: replicated
+      replicas: 1
+    restart: always
+    networks:
+      - private-network
+    depends_on:
+      - db-store
 
 networks:
   private-network:
