--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,12 +18,30 @@ services:
     networks:
       - private-network
 
+  discovery:
+    build:
+      context: ../platform.241.store.discovery/
+      dockerfile: Dockerfile
+    container_name: store-discovery
+    image: store-discovery:latest
+    ports:
+      - 8761:8761
+    environment:
+      - spring.datasource.url=jdbc:postgresql://store-db-store:5432/store
+      - spring.datasource.username=store
+      - spring.datasource.password=store
+    restart: always
+    networks:
+      - private-network
+
   account:
     build:
-      context: ../platforms-microservices-store-account-resource/
+      context: ../platform.241.store.account-resource/
       dockerfile: Dockerfile
     container_name: store-account
     image: store-account:latest
+    ports:
+      - 8080:8080
     environment:
       - spring.datasource.url=jdbc:postgresql://store-db-store:5432/store
       - spring.datasource.username=store
@@ -36,6 +54,7 @@ services:
       - private-network
     depends_on:
       - db-store
+      - discovery
 
 networks:
   private-network:
